--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,8 @@ Django==5.1.3
 django-widget-tweaks==1.5.0
 sqlparse==0.5.2
 tzdata==2024.2
+asgiref==3.6.0
+dj-database-url==1.2.0
+django-environ==0.9.0
+psycopg2-binary==2.9.5
+gunicorn==23.0.0
