--- a/hat/.env
+++ b/hat/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://test_database_7u7f_user:gqniotfFbJa0ASCQ62zijvKBAgnc0qdp@dpg-ct818a23esus73a3lh9g-a.ohio-postgres.render.com/test_database_7u7f
+DATABASE_URL=postgres://avnadmin:AVNS_XCh6q_2f1SzqhNyJpWy@pg-2aed72ec-adff.d.aivencloud.com:16201/defaultdb?sslmode=require
